# glasir_timetable

./: .gitignore  INSTALLATION.md  README.md  __init__.py  __main__.py  awoddwija.txt  constants.py  context.md  log.txt  main.py  pdm.toml  plan.md  plan_template.md  profile_output.prof  pyproject.toml  raw_data_plan.md  refactoring_plan.md  request.md  requirements.txt  test.json  test_api_client.py  test_service_factory.py
Data/: log.txt  profile_output.prof
extractors/: __init__.py  navigation.py  timetable.py
glasir_timetable/: __init__.py  account_manager.py  api_client.py  auth.py  constants.py  cookie_auth.py  domain.py  models.py  navigation.py  service_factory.py  services.py  session.py  student_utils.py
raw_responses/: raw_homework_lesson039E1394-BF72-4C3E-B24A-6756D92A4195_1743771506.html  raw_homework_lesson10F11DE5-BC53-40CE-95BE-70CF4458ED98_1743771503.html  raw_homework_lesson1ACA671C-4813-4D77-A6ED-8653EC371075_1743771503.html  raw_homework_lesson1BEDA7F6-9C7A-485E-9E1A-E032B59F7CCA_1743771506.html  raw_homework_lesson24C1622B-4C6B-4BF2-986C-2BEF6E45FCC3_1743771505.html  raw_homework_lesson2C244E15-0348-40B9-8383-5CB5B36341F9_1743771506.html  raw_homework_lesson3B5F99C4-69E4-4140-B6F0-9FC308065D10_1743771503.html  raw_homework_lesson3D88A340-F247-4686-A7E7-587D4054979C_1743771505.html  raw_homework_lesson407A8B6B-5DF6-4F58-8513-A2A7C1113B4C_1743771505.html  raw_homework_lesson4B24287F-D647-4CB0-9644-97E4EB177495_1743771506.html  raw_homework_lesson4E06FA22-2547-43C4-8CD7-B0E3C1033F27_1743771505.html  (+13 more)
scraped_site/: timetable_js_objects.json
(+146 files in other folders)
